@@ -7,6 +7,7 @@ Alpha0.3.0
 - Fixed console popping errors of isJailed() bug #10
 - Bumped to PocketMine API 3.0.0-ALPHA1 (Older APIs compatible)
 - Updated README.md, removing known bug 'GUI not showing'
+- Added support for EconomyPlus (Prisoner bail function)
 
 Alpha0.2.3
 - Fixed '/votejail' command not working for normal players
